Fixes for Android Compatibility